[package]
name = "radix-colors-derive"
version = "0.1.2"
edition = "2024"
description = "The Radix UI Colors palettes expressed in Rust constants."
license = "MIT"
repository = "https://github.com/johnbchron/radix-colors-rs"
readme = "../README.md"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
serde_json = "1.0"

[lib]
proc-macro = true
