[package]
name = "radix-colors"
version = "0.1.0"
edition = "2024"
description = "The Radix UI Colors palettes expressed in Rust constants."
license = "MIT"
repository = "https://github.com/johnbchron/radix-colors-rs"
readme = "../README.md"

[dependencies]
radix-colors-derive = { path = "../radix-colors-derive", version = "0.1.0" }
